--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
@@ -44,9 +44,17 @@ Para pasar un número decimal a binario:
 
 ![](img/2019-09-14-11-58-58.png)
 
+Ya podéis hacer los ejercicios 1 y 2
+
 ## Sistema hexadecimal
 
 Este sistema cuenta con 16 dígitos (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F) y se puede calcular la equivalencia entre el valor decimal de un hexadecimal de forma similar a como se hace con los binarios, pero ahora la base de numeración es 16, valor que habrá que ir elevando a las sucesivas potencias.
+
+A partir del 10, sustituimos el número por una letra:
+
+- 10 será A
+- 11 será B
+- etc.
 
 Lo que hace interesante el sistema hexadecimal es la inmediatez de transformación entre un número hexadecimal y su equivalente binario natural. Basta con escribir las cuatro cifras binarias de cada dígito para tener la equivalencia
 
@@ -59,6 +67,18 @@ Aplicaciones:
 
 #### Convertir entre binario y hexadecimal
 
+Existe una equivalencia entre código hexadecimal y binario
+
+![](img/2019-09-16-08-10-22.png)
+
+# De binario a hexadecimal
+
+Asimismo, la conversión de un número binario a hexadecimal es igual de sencilla: se agrupan los bits de cuatro en cuatro, comenzando por la derecha (por el bit de menor peso), y luego se sustituye cada grupo de cuatro bits por su equivalente hexadecimal.
+
+  1101101011002 --> 1101 1010 1100 -->DAC16
+
+# De hexadecimal a binario
+
 La conversión de un número hexadecimal a uno binario es muy sencilla:  basta con sustituir cada cifra hexadecimal por su equivalente en binario.
 
 Por ejemplo:
@@ -67,9 +87,7 @@ Por ejemplo:
 
 (Naturalmente, podemos eliminar los dos ceros de la izquierda).
 
-Asimismo, la conversión de un número binario a hexadecimal es igual de sencilla: se agrupan los bits de cuatro en cuatro, comenzando por la derecha (por el bit de menor peso), y luego se sustituye cada grupo de cuatro bits por su equivalente hexadecimal.
-
-  1101101011002 --> 1101 1010 1100 -->DAC16
+    Ya podéis hacer los ejercicios 3 y 4
 
 ## Códificación de caracteres
 
@@ -130,18 +148,25 @@ Para no romper la compatibilidad con ASCII, se hace que el primer bit signifique
         F22
         344
 
-5.Averigua cuántos números pueden representarse con 8, 10, 16 y 32 bits y cuál es el número más grande que puede escribirse en cada caso.
+5.Completa la tabla:
+
+![](img/2019-09-16-08-07-18.png)
 
 6.Dados dos números binarios: 01001000 y 01000100 ¿Cuál de ellos es el mayor? ¿Podrías compararlos sin necesidad de convertirlos al sistema decimal?
 
 7.Escribe los nombres de tus compañeros de la derecha e izquierda tuyos en ASCII.
 
-8.Convierte la fecha de tu cumpleaños en binario. ¿Cuantos bits necesitarías?
+8.Convierte la fecha de tu cumpleaños en binario. ¿Cuantos bits necesitarías? El formato es DD/MM/YY, cada número codificado por separado.
 
-9.¿Cuantos KB se necesitan aproximadamente para guardar todos los nombres y fechas de nacimiento de todos los alumnos del colegio?
+9.¿Cuantos bits se necesitan aproximadamente para guardar todos los nombres y fechas de nacimiento de todos los alumnos del colegio?
 
-10.¿Cómo sabrías si un numero binario es par o impar sin con
+10.¿Cómo sabrías si un numero binario es par o impar sin convertirlo a decimal?
 
 ## Practicar online
+
+Podéis practicar en estas páginas:
+
+- https://studio.code.org/projects/applab/iukLbcDnzqgoxuu810unLw
+- http://flippybitandtheattackofthehexadecimalsfrombase16.com/
 
 ![](img/2019-09-14-11-43-17.png)
