--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
@@ -160,7 +160,9 @@ Para no romper la compatibilidad con ASCII, se hace que el primer bit signifique
 
 9.¿Cuantos bits se necesitan aproximadamente para guardar todos los nombres y fechas de nacimiento de todos los alumnos del colegio?
 
-10.¿Cómo sabrías si un numero binario es par o impar sin convertirlo a decimal?
+10.Crea un archivo de texto en el que ponga "me llamo" y tu nombre, y ábrelo con el siguiente programa. Comprueba que tamaño ocupa el archivo:
+
+http://blog.bodurov.com/Bytes-and-Bits-Viewer/
 
 ## Practicar online
 
