Update and rename memoria.md to 5.memoria.md

--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
@@ -4,7 +4,10 @@ La memòria RAM
 
 ![](img/2019-09-14-10-34-36.png)
 
-Memòria cau
+Memòria caché
+
 Memòria virtual
+
 Memòria ROM-BIOS
+
 Memòria RAM-BIOS
