--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
@@ -75,7 +75,7 @@ Existe una equivalencia entre código hexadecimal y binario
 
 Asimismo, la conversión de un número binario a hexadecimal es igual de sencilla: se agrupan los bits de cuatro en cuatro, comenzando por la derecha (por el bit de menor peso), y luego se sustituye cada grupo de cuatro bits por su equivalente hexadecimal.
 
-  1101101011002 --> 1101 1010 1100 -->DAC16
+    110110101100 --> 1101 1010 1100 -->DAC
 
 # De hexadecimal a binario
 
@@ -84,6 +84,9 @@ La conversión de un número hexadecimal a uno binario es muy sencilla:  basta c
 Por ejemplo:
 
     3AFF = 0011 1010 1111 1111
+
+Aquí A corresponde al número 10, y F corresponde al número 15
+
 
 (Naturalmente, podemos eliminar los dos ceros de la izquierda).
 
