--- a/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO.md/4.Almacenamiento.md
+++ b/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO.md/4.Almacenamiento.md
@@ -1,5 +1,25 @@
 # Estructura física y lógica del almacenamiento (1)
-Almacenamiento de la información. 
-Particiones. 
-Sistema de archivo. 
-Organización de archivos
+
+## Almacenamiento de la información. 
+
+## Organización de archivos y extensiones
+
+### Carpetas
+
+### Nomenclatura
+
+### Accesos directos
+
+## Particiones. 
+
+## Sistema de archivo
+
+## Dispositivos de almacenamiento
+
+### Disco duro
+
+### Características de un disco duro
+
+### Controladores
+
+### Particiones
