--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/2. Unidades-medida.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/2. Unidades-medida.md
@@ -8,29 +8,23 @@ Entre las unidades de medición de almacenamiento, es decir, la cantidad de bits
 
 ### Bit
 
-- Binary digit
-- Unidad mínima del código binario
-- Utilizado por los ordenadores para almacenar la información.
-- Cada bit sólo puede tener 2 valores 0 o 1
-- Con un número n de bits pueden representarse hasta 2n valores diferentes.
+El bit es la unidad mínima del código binario. Cada bit sólo puede tener 2 valores 0 o 1. Con un número n de bits pueden representarse hasta 2 elevado a n valores diferentes.
 
-### Nibble
-
-Cuatro bits forman un nibble, y pueden representar hasta 24 = 16 valores diferentes
+Un bit es una unidad muy pequeña, por lo que habitualmente se utilizan múltiplos del byte, especialmente el **Gigabyte** y el **Terabyte**.
 
 ### Byte
 
-El byte (abreviado con la mayúscula B) es una unidad de información compuesta por 8 bits. Se puede utilizar para almacenar, entre otras cosas, un carácter, como por ejemplo una letra o un número.
+El byte (abreviado con la mayúscula B para diferenciarlo del bit) es una unidad de información compuesta por 8 bits. Se puede utilizar para almacenar, entre otras cosas, un carácter, como por ejemplo una letra o un número.
 
 ![](img/2019-09-13-18-11-18.png)
+
+Como curiosidad, existía una medidas de cuatro bits que se conoce como **nibble**, pero no se utiliza en la actualidad.
 
 ### Kilobyte
 
     En el inicio de la informática, al utilizar el sistema binario, resultó más cómodo utilizar potencias de dos para establecer las unidades. Y así se estableció el Kilobyte como 1.024 bytes, es decir, dos elevado a la diez bytes. Por eso contamos de 1024 y no de 1000 en 1000.
 
-1 KB = 1024 bytes (B)
-Su símbolo es KB
-Se utiliza para almacenamiento de: 
+Un KB corresponde a 1024 bytes (B). Se utiliza para almacenamiento de:
 
 - Archivos pequeños
 - Documentos de texto (1.000 caracteres)
@@ -40,11 +34,7 @@ Se utiliza para almacenamiento de:
 
 ### Megabyte
 
-1 MB = 1024 Kilobytes (KB)
-
-Su símbolo es MB.
-
-Equivale a más de un millón de bytes
+Un MB corresponde a 1024 Kilobytes (KB). Equivale a más de un millón de bytes.
 
 Por ejemplo:
 
@@ -56,11 +46,11 @@ Por ejemplo:
 
 ### Gigabyte
 
-1 GB = 1024 MB
+Un GB contiene 1024 MB de información. Equivale a mil millones de bytes. Es la unidad que más típicamente se maneja hoy en día, la podemos encontrar en:
 
-Equivale a mil millones de bytes.
-
-Es la unidad que más típicamente se maneja hoy en día.
+- Tamaño de memoria RAM
+- Capacidad de datos de líneas móviles
+- Memorias USB y almacenamiento en smartphones.
 
 Los ordenadores más comunes proveen de un espacio de más de 100 GB para memoria secundaria (discos duros)
 
@@ -70,21 +60,24 @@ Los ordenadores más comunes proveen de un espacio de más de 100 GB para memori
 
 ### Terabyte
 
-Equivale a 1024 Gigabytes o 240 Bytes
+Un **Terabyte** o TB equivale a 1024 Gigabytes o 240 Bytes
 Su símbolo es TB
 
-Un Terabyte equivale aproximadamente a:
+Un **Terabyte** equivale aproximadamente a:
 
 - 300 horas de video
 - 3,6 millones de fotografías digitales estándar.
 - 1.000 copias de la Enciclopedia Británica digital.
 
+Los discos duros actuales de ordenador tienen capacidades en torno a 1-4 TB de espacio.
+
 ![](img/2019-09-13-18-12-44.png)
 
 ### Unidades mayores
 
-Aunque los términos más allá del terabyte no se usan
-comúnmente, ciertamente existen.
+Aunque los términos más allá del terabyte no se usan comúnmente, existen varias medidas inventadas, que con el tiempo se volverán habituales.
+
+Las siguientes medidas por encima del TB son:
 
 - 1 petabyte = 1.024 terabytes
 - 1 exabyte = 1.024 petabytes
@@ -95,11 +88,11 @@ Las medidas de almacenamiento de información (en base 2) aumentan de 1024 en 10
 
 ### Conversión de unidades
 
-Para realizar la conversión de las medidas de almacenamiento.
-
-Se multiplica o divide por 1024 cuantas veces sea necesario hasta llegar a la medida deseada.
+Para realizar la conversión de las medidas de almacenamiento, se multiplica o divide por 1024 cuantas veces sea necesario hasta llegar a la medida deseada.
 
 ![](img/2019-09-13-18-13-11.png)
+
+El único salto diferente es para pasar de Bytes a bits, en el que deberemos multiplicar o dividir por 8.
 
 # Velocidad de transmisión de datos
 
@@ -107,7 +100,7 @@ Utilizamos constantemente las redes informáticas para transmitir todo tipo de i
 
 A la hora de definir las velocidades de transmisión se suele usar como base el bit, y más concretamente el bit por segundo, o `bps`. 
 
-Los múltiplos de estos son el Kilobit, Megabit y Gigabit, siempre expresado en el término por segundo (ps). Las abreviaturas se diferencian de los términos de almacenamiento en que se expresan con b minúscula. Estas abreviaturas son:
+Los múltiplos de estos son el **Kilobit, Megabit y Gigabit**, siempre expresado en el término por segundo (ps). Las abreviaturas se diferencian de los términos de almacenamiento en que se expresan con b minúscula. Estas abreviaturas son:
 
     Kbps = 1.000 bits por segundo.
     Mbps = 1.000 Kbits por segundo.
