--- a/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/3.Sistemas-operativos.md
+++ b/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/3.Sistemas-operativos.md
@@ -1,14 +1,16 @@
 ## Sistemas operativos (1)
 
-Un **sistema operativo** es el programa (software) encargado de poner en funcionamiento
-el ordenador, tablet o smartphone, puesto que gestiona los procesos básicos del
-sistema. Así mismo se encarga de gestionar para el usuario el hardware. El Sistema
-Operativo es el programa básico sin el cual un ordenador, una tablet o un smartphone no
+Un **sistema operativo** (SO) es el programa (software) encargado de poner en funcionamiento
+el ordenador, tablet o smartphone, puesto que gestiona los procesos básicos del sistema. Así mismo:
+
+- Se encarga de gestionar para el usuario el hardware
+- El Sistema Operativo es el programa básico sin el cual un ordenador, una tablet o un smartphone no
 podría funcionar.
+- El sistema operativo comienza a trabajar en cuanto se enciende el dispositivo y es completamente fundamental para que el usuario trabaje con él. 
 
-El sistema operativo comienza a trabajar en cuanto se enciende el dispositivo y es completamente fundamental para que el usuario trabaje con él. Los sistemas operativos realizan tareas básicas y, sin ellos, el dispositivo no funcionaría.
+Los sistemas operativos realizan tareas básicas y, sin ellos, el dispositivo no funcionaría.
 
-Así, por ejemplo, el sistema operativo reconoce la conexión del teclado de un ordenador, organiza y ordena los archivos, controla la impresora, la pantalla, etc. Es como un policía de tráfico pues, se encarga de que los programas no interfieran entre ellos.
+Así, por ejemplo, el sistema operativo reconoce la conexión del teclado de un ordenador, organiza y ordena los archivos, controla la impresora, la pantalla, etc. Se encarga de que los programas no interfieran entre ellos.
 
 ## Programas o aplicaciones
 
@@ -16,9 +18,8 @@ Sobre el sistema operativo se instalan los programas que vaya a usar el usuario.
 
 Ejemplo:
 
-- El procesador de
-textos Word en un ordenador con Windows o la famosa aplicación de mensajería
-Whatsapp en un móvil con Android o IOS.
+- El procesador de textos Word en un ordenador con Windows
+- La aplicación de mensajería Whatsapp en un móvil con Android o IOS.
 
 ## Tipos de sistemas operativos
 
@@ -62,14 +63,23 @@ actualizaciones.
 
 Los sistemas operativos de ordenador más extendidos son:
 
-- **Windows** (en sus diferentes versiones): Windows XP, Windows Vista,Windows 7, Windows 8, Windows 10... Es un sistema operativo propiedad de la empresa
-MicroSoft que es privativo (de pago). 
-- **Mac OS X:** Es un sistema operativo propiedad de la empresa Apple, (el creador del Ipod) que es privativo.
-- **GNU/Linux:** Sistema operativo que está en alza, completamente gratuito. Este es el sistema operativo que está instalado en las aulas de informática de nuestro
-instituto y en las aulas del grupo. Cualquiera, con conocimiento de programación, lo puede modificar según sus necesidades, al contrario que los anteriores. Además,
-es bastante seguro.
+- **Windows** (en sus diferentes versiones): Windows XP, Windows Vista,Windows 7, Windows 8, Windows 10... Es un sistema operativo propiedad de la empresa MicroSoft que es privativo (de pago). 
 
-### SO de escritorio y móviles
+Versiones de Windows: https://ca.wikipedia.org/wiki/Llistat_de_les_versions_de_Microsoft_Windows
+
+- **Mac OS X:** Es un sistema operativo propiedad de la empresa Apple, (el creador del Ipod) que es privativo.
+
+Versiones de Mac: https://ca.wikipedia.org/wiki/MacOS
+
+- **GNU/Linux:** Sistema operativo que está en alza, completamente gratuito. Cualquiera, con conocimiento de programación, lo puede modificar según sus necesidades, al contrario que los anteriores. Además, es bastante seguro. A las diferentes versiones de Linux se les llama **distribuciones**
+
+Versiones de Linux: https://maslinux.es/las-5-distros-gnu-linux-mas-populares/
+
+### SO de dispositivos móviles
+
+Estadísticas de SO:
+
+- https://gs.statcounter.com/os-market-share/mobile/worldwide
 
 Los Smartphones y tablets tienen también su programa básico de gestión, esto es, su sistema operativo.
 
@@ -90,6 +100,8 @@ Los dos sistemas operativos móviles más extendidos en España son:
 
 Es el empleado en los Iphone y Ipads. Su funcionamiento es sencillo, intuitivo y en general ofrece un rendimiento bastante bueno.
 
+https://en.wikipedia.org/wiki/IOS_version_history
+
 #### Android, de Google
 
 ![](img/2019-09-16-16-40-33.png)
@@ -98,6 +110,11 @@ Es el más extendido actualmente y está integrado en la mayoría de los teléfo
 núcleo es Linux.
 
 Es un sistema operativo cuya filosofía parte de ser un entorno abierto para que cualquier programador y fabricante pueda modificarlo a su gusto para posteriormente distribuirlo.
+
+Versiones de Android: 
+
+- https://www.android.com/intl/es_es/history
+- https://es.wikipedia.org/wiki/Anexo:Historial_de_versiones_de_Android
 
 ## Funciones principales
 
@@ -127,12 +144,9 @@ Las tareas realizadas con los archivos (copiarlos, trasladarlos o cambiarles el 
 
 **Administra las tareas**
 
-Actualmente, los sistemas operativos son multitarea, es
-decir, que pueden realizar simultáneamente distintos trabajos (por ejemplo,
-navegar por Internet, editar texto o copiar un CD). 
+Actualmente, los sistemas operativos son multitarea, es decir, que pueden realizar simultáneamente distintos trabajos (por ejemplo, navegar por Internet, editar texto o copiar un CD). 
 
-El sistema operativo se encarga de regular el orden de ejecución de las instrucciones en el microprocesador, para que todos estos programas puedan funcionar de forma
-aparentemente simultánea. 
+El sistema operativo se encarga de regular el orden de ejecución de las instrucciones en el microprocesador, para que todos estos programas puedan funcionar de forma aparentemente simultánea. 
 
 ## SO multiusuario y multitarea 
 
