--- a/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/1. Representacion-digital-informacion.md
+++ b/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/1. Representacion-digital-informacion.md
@@ -61,3 +61,9 @@ base de 2 correspondiente a su posición. La suma total nos da el número.
 en el sistema decimal?
 2. ¿Cuál es el mayor número que puedes representar usando tres dígitos
 binarios? ¿Y con cuatro dígitos binarios?
+3. Suma el día, mes y año de tu cumpleaños y pása el número resultante a binario.
+4. Convierte:
+- 16.384‬ KB a MB
+- 2,5 TB a KB
+- 3 MB a bits
+- 131.072 bits a KB
