--- a/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/1. Representacion-digital-informacion.md
+++ b/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/1. Representacion-digital-informacion.md
@@ -25,10 +25,6 @@ Como un bit contiene una cantidad de información demasiado pequeña, se utiliza
 
 ## Actividades
 
-1. ¿Cuántos bits caben en un pendrive de 2Gb? Si cada letra ocupa un byte, ¿cuántas letras cabrán?
-2. Si un fichero ocupa 10MB, ¿cuántos ficheros podremos guardar en un pendrive de 4Gb?
-3. ¿Cuántas fotos de 1MB se pueden guardar en un disco duro de 2TB?
-4. ¿A cuántos CD equivale un DVD? ¿y un Blu-Ray?
 
 ## Sistemas de numeración.
 
@@ -57,12 +53,15 @@ base de 2 correspondiente a su posición. La suma total nos da el número.
 
 ## Actividades
 
-1. ¿Cómo indicarías tu edad a un ordenador? ¿Qué número es el 100010
-en el sistema decimal?
+1. ¿Qué número es el 100010 en decimal?
 2. ¿Cuál es el mayor número que puedes representar usando tres dígitos
 binarios? ¿Y con cuatro dígitos binarios?
 3. Suma el día, mes y año de tu cumpleaños y pása el número resultante a binario.
-4. Convierte:
+4. ¿Cuántos bits caben en un pendrive de 2Gb? Si cada letra ocupa un byte, ¿cuántas letras cabrán?
+5. Si un fichero ocupa 10MB, ¿cuántos ficheros podremos guardar en un pendrive de 4Gb?
+6. ¿Cuántas fotos de 1MB se pueden guardar en un disco duro de 2TB?
+7. ¿A cuántos CD equivale un DVD? ¿y un Blu-Ray?
+8. Convierte:
 - 16.384‬ KB a MB
 - 2,5 TB a KB
 - 3 MB a bits
