--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
@@ -170,6 +170,12 @@ Para no romper la compatibilidad con ASCII, se hace que el primer bit signifique
 
 http://blog.bodurov.com/Bytes-and-Bits-Viewer/
 
+Enlace por si no tenéis acceso al classroom:
+
+Podéis ver el enunciado en: https://cutt.ly/cwLADpN
+Enviar la tarea a danielmoreno@iesramonllull.net
+
+
 ## Practicar online
 
 Podéis practicar en estas páginas:
