--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/2. Unidades-medida.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/2. Unidades-medida.md
@@ -120,9 +120,9 @@ Si queremos descargar un archivo de 5 GB (5.120 MB), tardaría:
 
 ### Preguntas
 
-1. Si una película ocupa 700 MB ¿cuántas películas caben en un DVD que tiene 4,7 GB de capacidad?
+1. Si una película ocupa 700 MB ¿cuántas películas caben en un DVD que tiene 8,5 GB de capacidad?
 2. Ordena de menor a mayor tamaño de los siguientes archivos: dibujo.bmp (1536 KB), carta.doc (1.048.576 bytes), cancion.mp3 (1,4 MB), video.avi (0,1 GB)
-3. ¿Cuántos DVD de 4,9 GB se necesitan para grabar el contenido de un disco duro de 1,5 TB?
+3. ¿Cuántos DVD de 4,7 GB se necesitan para grabar el contenido de un disco duro de 3 TB?
 4. Cuenta cuantos meses faltan para tu próximo cumpleaños (número entero). Imagina que cada mes haces 500 fotos por mes con tu móvil a máxima resolución y los quieres guardar en un pendrive USB. ¿Cual te comprarías? Búsca uno en Amazon que te vaya bien.
-6. Averigua qué conexión tienes en casa tú y tu compañero de la derecha. Le quieres enviar todas las fotos. ¿Cuanto tardarán en llegarle?
-7. Un amigo tiene una conexión ADSL de 10 Mbps. ¿Con qué calidad puede ver Netflix?
+5. Imagina que tienes una conexión de 20 Mbps. Le quieres enviar a un amigo todas las fotos. ¿Cuanto tardarán en llegarle?
+6. Te quieres descargar un programa que ocupa 8 GB y en tu casa tienes fibra óptica de 300 Mbps. ¿Cuanto tiempo tardarás en descargarlo?
