--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
@@ -11,3 +11,7 @@ Memòria virtual
 Memòria ROM-BIOS
 
 Memòria RAM-BIOS
+
+**Actividades**
+
+Consulta qué memoria RAM tiene tu ordenador y tu smartphone
