--- a/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/3.Sistemas-operativos.md
+++ b/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/3.Sistemas-operativos.md
@@ -27,8 +27,7 @@ Ejemplo:
 
 Fueron creados por empresas para su uso comercial. Tales empresas son sus propietarias y cobrar por utilizarlo y distribuirlo y aquellos que lo diseñaron y crearon ocultan su código original para evitar que se altere.
 
-Sólo la empresa propietaria tiene derecho a modificar el software. Además, queda
-prohibida su distribución sin un previo pago. 
+Sólo la empresa propietaria tiene derecho a modificar el software. Además, queda prohibida su distribución sin un previo pago.
 
 Ejemplos de SO propietario:
 
@@ -51,10 +50,9 @@ El software **libre**
 
 El software **privativo**
 
-- Suele ser de pago, aunque no siempre y su distribución suele estar restringida. 
-- Su código está cerrado, es decir, el propietario del software es el único que conoce el código de la aplicación y sólo el puede admitir modificaciones y
-actualizaciones. 
-- Normalmente es de pago, aunque no siempre. 
+- Suele ser de pago, aunque no siempre y su distribución suele estar restringida
+- Su código está cerrado, es decir, el propietario del software es el único que conoce el código de la aplicación y sólo el puede admitir modificaciones y actualizaciones. 
+- Normalmente es de pago, aunque no siempre
 - Ejemplos: PhotoShop.
 
 ![](img/2019-09-16-16-37-22.png)
@@ -118,9 +116,7 @@ Versiones de Android:
 
 ## Funciones principales
 
-Sin un sistema operativo, el ordenador no podría funcionar, ya que este no tendría
-acceso a los periféricos, el microprocesador no tendría instrucciones de
-funcionamiento, no se podrían cargar programas, etc.
+Sin un sistema operativo, el ordenador no podría funcionar, ya que este no tendría acceso a los periféricos, el microprocesador no tendría instrucciones de funcionamiento, no se podrían cargar programas, etc.
 
 Podemos resumir las funciones del sistema operativo en cuatro:
 
