--- a/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/4.Almacenamiento.md
+++ b/BATX TIC/TIC 4 ESO/UD1. Equipos informaticos i SO/4.Almacenamiento.md
@@ -9,6 +9,24 @@ Cada archivo se identifica por su nombre (máximo 255 caracteres) y su extensió
 - Nos informa de que tipo de archivo se trata
 - Le dice al sistema operativo con qué programa lo debe de abrir
 
+Ejemplos de extensiones:
+
+![](img/2019-09-24-08-48-40.png)
+
+## Carpetas
+
+El S.O. permite organizar la información en unidades lógicas, carpetas y archivos.
+
+## Unidades
+
+Las unidades lógicas son generalmente discos duros, ópticos, discos extraíbles o discos de red, y tienen letras para diferenciarlos.
+
+![](img/2019-09-24-08-49-42.png)
+
+Ejemplo de unidades (Mi PC):
+
+![](img/2019-09-24-08-32-14.png)
+
 Los archivos se organizan en diferentes **carpetas** para poder ser accedidos más fácilmente.
 
 ![](img/2019-09-17-08-31-42.png)
@@ -58,7 +76,7 @@ Otros sistemas:
 
 ## Particiones
 
-Consiste en dividir un disco duro en una o más particiones lógicas, donde cada una se comporta como si fuese un disco duro independiente, asignándole una unidad con una letra.
+Consiste en dividir un disco duro en una o más partes lógicas, donde cada una se comporta como si fuese un disco duro independiente, asignándole una unidad con una letra.
 
 De este modo puedo:
 
