--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
@@ -2,6 +2,11 @@
 
 La memòria RAM
 
+Formato de memoria RAM
+- Chips de memoria (circuitos integrados) soldados a una placa, llamada módulo de
+memoria.
+- Cada chip está compuesto de celdas de memoria, donde se almacenan los bits.
+
 ![](img/2019-09-14-10-34-36.png)
 
 Memòria caché
