--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
@@ -9,6 +9,34 @@ memoria.
 
 ![](img/2019-09-14-10-34-36.png)
 
+Al cargar el SO, ejecutar un programa o abrir un archivo:
+1. El archivo o el programa están en el HD, DVD, etc.
+2. Se cargan del HD a la RAM (se copian)
+3. CPU lee la información de la RAM
+De este modo, se aceleran las tareas
+
+Trabajar directamente en el disco (CPU
+leyendo/escribiendo en disco) es sumamente
+lento.
+
+
+Cada sistema operativo, juego o aplicación, necesita un
+mínimo de memoria para poder cargarse y ejecutarse
+correctamente.
+
+## Características pricipales
+
+• Cantidad de memoria:
+• Cuanta más memoria hay, más rápido funciona sistema.
+• Tener en cuenta máximo soportado por la placa base y requisitos del sistema operativo
+• Tecnología de memoria:
+• DDR3 es más rápido que DDR2. DDR2 > DDR > SDRAM.
+• Memorias buffered o registered pueden mejorar el rendimiento.
+• Velocidad de la memoria (MHz, PC o ns)
+• Utilizar la más rápida compatible con la placa base.
+• Si instala módulos de diferentes velocidades, el sistema funcionará a la velocidad más lenta
+o podría volverse inestable.
+
 Memòria caché
 
 Memòria virtual
