--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/5.memoria.md
@@ -1,8 +1,33 @@
-## Memòria primària
+## La memòria RAM
 
-La memòria RAM
+El ordenador tiene diferentes memorias donde guardar información, programas o datos. Entre ellos están los discos, la memoria
+ram, la caché, etc.
 
-Formato de memoria RAM
+Algunos de ellos guardan la información permanentemente (disco duro) o de forma temporal (memoria RAM). 
+Unos son más rápidos que otros. Una memoria RAM es mucho más rápida que un disco duro para leer o escribir información.
+
+## Por qué necesitamos una memoria RAM
+
+Trabajar directamente en el disco (CPU leyendo/escribiendo en disco) es sumamente lento. Si todos los programas 
+instalados, así como el sistema operativo, se tuvieran que leer y escribir directamente en el disco duro
+el ordenador funcionaría mucho más lento.
+
+La memoria RAM es un tipo de memoria en la que se guardan los datos de los programas y el SO mientras se van ejecutando y, 
+una vez que se cierran o se guarda información, lo que hay en la memoria RAM se guarda en el disco duro. Al apagar 
+el ordenador, la memoria RAM se borra.
+
+## Memoria RAM mínima
+
+Cada sistema operativo, juego o aplicación, necesita un mínimo de memoria para poder cargarse y ejecutarse
+correctamente.  Cuanta más memoria RAM tenemos, podremos ejecutar programas más complejos y, sobretodo, tener abiertos más programas o pestañas al mismo tiempo.
+
+- Imaginemos que queremos tener **Windows 10** instalado. Como mínimo necesita 1 GB de ram, por lo que si tengo menos no se podrá
+instalar.
+- Para trabajar con **Photshop**, se necesita mínimo 2 GB de RAM, aunque se recomiendan 8 GB. Cuantas más cosas tenga abiertas
+y más complejas sean las imágenes con las que esté trabajando, más memoria consumirá el programa.
+
+## Formato de memoria RAM
+
 - Chips de memoria (circuitos integrados) soldados a una placa, llamada módulo de
 memoria.
 - Cada chip está compuesto de celdas de memoria, donde se almacenan los bits.
@@ -15,13 +40,6 @@ Al cargar el SO, ejecutar un programa o abrir un archivo:
 3. CPU lee la información de la RAM
 De este modo, se aceleran las tareas
 
-Trabajar directamente en el disco (CPU
-leyendo/escribiendo en disco) es sumamente
-lento.
-
-Cada sistema operativo, juego o aplicación, necesita un
-mínimo de memoria para poder cargarse y ejecutarse
-correctamente.
 
 ## Características pricipales
 
