--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/6.puertos-y-tarjetas-expansion.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/6.puertos-y-tarjetas-expansion.md
@@ -1,5 +1,58 @@
 # Puertos de comunicación y tarjetas ed expansión
 
+Hoy en día podemos encontrar puertos en la mayoría de componentes y periféricos informáticos, así como equipos domésticos de imagen y sonido.
+
+- Placa base
+- Periféricos
+- Dispositivos externos
+- Tarjetas de expansión
+- Equipos domésticos 
+- Reproductores de vídeo
+- Televisiones
+- Consolas
+
+![](img/2019-10-01-08-20-00.png)
+
+![](img/2019-10-01-08-20-04.png)
+
+## Cables, adaptadores y hubs
+
+Generalmente todos los cables disponen de 2 conectores del mismo tipo. Según el tipo, pueden ser:
+
+- M = Macho
+- F = Hembra
+
+A la hora de elegir y comprar un cable, nos tenemos que fijar en la configuración de los 2 conectores:
+
+- M-M: dos conectores macho
+- M-F: uno hembra y uno macho
+- F-F: dos hembra
+
+### Adaptadores
+
+Están formados por un cable con 2 conectores de diferente tipo
+Transforman un tipo de Puerto/conector en otro
+
+![](img/2019-10-01-08-21-11.png)
+
+### Hubs o concentradores
+
+Mismo cable con varios conectores en un extremo: Adaptadores múltiple o Hub
+
+![](img/2019-10-01-08-20-57.png)
+
+## Cables y conectores
+
+Existen diferentes tipos de cables y conectores, en función del tipo de la señal que transportan:
+
+- Cables de corriente
+- Cables de vídeo
+- Cables de audio
+- Cables de datos
+- Clasifica los cables de la derecha en los diferentes tipos
+
+![](img/2019-10-01-08-21-52.png)
+
 ## Puerto USB
 ## Puerto eSATA
 ## Puerto HDMI
