--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/4.1.Procesador.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/4.1.Procesador.md
@@ -12,8 +12,7 @@ En general, cuanto más rápido sea el procesador y más núcleos tenga, podrá 
 
 ## Socket
 
-El procesador se conecta a la placa base en un lugar de la placa llamado **socket**. Los sockets son de diferentes formas,
-algunos tienen más o menos pines para conectar, entre otras diferencias.
+El procesador se conecta a la placa base en un lugar de la placa llamado **socket**. Los sockets son de diferentes formas, algunos tienen más o menos pines para conectar, entre otras diferencias.
 
 Según el modelo de socket que tenga nuestra placa base podré conectar un procesador u otro, por lo que  es importante tener
 en cuenta cual es el procesador que queremos instalar y asegurarnos que la placa tiene un socket compatible con él.
@@ -27,7 +26,7 @@ se sobrecaliente.
 Lleva incorporado un sistema de refrigeración que consta de:
 
 - Un disipador metálico
-- Un ventilador. 
+- Un ventilador
 
 ![](img/2019-10-01-08-15-59.png)
 
@@ -40,7 +39,7 @@ El sistema de refrigeración se coloca encima de una pasta térmica que a su vez
 Para realizar correctamente la instalación deberemos seguir los siguientes pasos:
 
 - Abrimos el socket, colocamos el procesador en su interior y cerramos la horquilla
-- Colocamos pasata térmica encima del procesador
+- Colocamos pasta térmica encima del procesador
 - Tapamos el procesador con el disipador correspondiente y que quede bien fijado.
 - Conectamos el cable del disipador a la placa base para que le llegue corriente y pueda funcionar el ventilador.
 
