--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/6.puertos-y-tarjetas-expansion.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/6.puertos-y-tarjetas-expansion.md
@@ -1,4 +1,21 @@
-# Puertos de comunicación y tarjetas ed expansión
+- [Puertos de comunicación](#puertos-de-comunicaci%c3%b3n)
+  - [Cables, adaptadores y hubs](#cables-adaptadores-y-hubs)
+    - [Adaptadores](#adaptadores)
+    - [Hubs o concentradores](#hubs-o-concentradores)
+  - [Cables y conectores](#cables-y-conectores)
+  - [Puerto USB](#puerto-usb)
+  - [Puerto eSATA](#puerto-esata)
+  - [Puerto HDMI](#puerto-hdmi)
+  - [Puerto de red](#puerto-de-red)
+  - [Puerto de audio](#puerto-de-audio)
+  - [Puerto thunderbolt](#puerto-thunderbolt)
+  - [Puertos en desuso](#puertos-en-desuso)
+    - [Puerto serie y paralelo](#puerto-serie-y-paralelo)
+    - [Puerto VGA y DVI](#puerto-vga-y-dvi)
+    - [Puerto de infrarrojos](#puerto-de-infrarrojos)
+    - [Puerto firewire](#puerto-firewire)
+
+# Puertos de comunicación 
 
 Hoy en día podemos encontrar puertos en la mayoría de componentes y periféricos informáticos, así como equipos domésticos de imagen y sonido.
 
@@ -66,7 +83,3 @@ Existen diferentes tipos de cables y conectores, en función del tipo de la señ
 ### Puerto VGA y DVI
 ### Puerto de infrarrojos
 ### Puerto firewire
-
-## Tarjetas de expansión
-
-### Tarjeta gráfica
